--- a/Profesores/SolicitarAsignaturas.html
+++ b/Profesores/SolicitarAsignaturas.html
@@ -51,11 +51,12 @@
 
 		<div id="areaDeTrabajo">
 
-			<h2> Solicitar Asignaturas </h2>
+
 			<form class="contact_form" action="#" id="contact_form" runat="server">
 			<div>
 			  <ul>
 				<li>
+				<span><h2> Solicitar Asignaturas </h2></span>
 				<span class="required_notification">* Datos requeridos</span>
 				</li>
 
