--- a/Profesores/EstadoSolicitud.html
+++ b/Profesores/EstadoSolicitud.html
@@ -50,7 +50,7 @@
 
 		<div id="areaDeTrabajo">
 
-				<h2>Estado solicitud</h2>
+				<center><h2>Estado solicitud</h2></center>
 
 			<table class="catalog">
 				<tr>
@@ -61,7 +61,7 @@
 					<td class="chiquito">D&iacute;as</td>
 					<td class="chiquito">Edificio</td>
 					<td class="chiquito">Estado Solicitud</td>
-					<td class="mediano">Editar</td>
+
 				</tr>
 				<tr>
 					<td>ICC1</td>
@@ -71,7 +71,7 @@
 					<td class="chiquito">Lunes,Viernes</td>
 					<td class="chiquito">Edificio A </td>
 					<td class="chiquito">Rechazada </td>
-					<td class="mediano"><a href = "SolicitarAsignaturas.html"><img class="button" src="../img/edit-icon.png"></a></td>
+
 				</tr>
 				<tr>
 					<td>ICC2</td>
@@ -81,7 +81,7 @@
 					<td class="chiquito">Lunes,Viernes</td>
 					<td class="chiquito">Edificio O </td>
 					<td class="chiquito">Aceptada </td>
-					<td class="mediano"><a href = "SolicitarAsignaturas.html"><img class="button" src="../img/edit-icon.png"></a></td>
+
 				</tr>
 				<tr>
 					<td>Ing. Software</td>
@@ -91,7 +91,7 @@
 					<td class="chiquito">Lunes,Viernes</td>
 					<td class="chiquito">Edificio P </td>
 					<td class="chiquito">Pendiente </td>
-					<td class="mediano"><a href = "SolicitarAsignaturas.html"><img class="button" src="../img/edit-icon.png"></a></td>
+
 				</tr>
 			</table>
 		</div>
