--- a/Profesores/FormularioNuevaMateria.html
+++ b/Profesores/FormularioNuevaMateria.html
@@ -55,7 +55,7 @@
 
 			<ul>
 				<li>
-				<span><h2> Solicitar Asignaturas </h2></span>
+				<span><center><h2> Solicitar Asignaturas </h2></center></span>
 				<span class="required_notification">* Datos requeridos</span>
 				</li>
 				<li>
