--- a/JefesCarrera/SolicitudAsignaturas.html
+++ b/JefesCarrera/SolicitudAsignaturas.html
@@ -71,7 +71,7 @@
 
 		<div id="areaDeTrabajo">
 
-				<h2> Solicitud de Asignatura </h2>
+				<center><h2> Solicitud de Asignatura </h2></center>
 
 
 			<table class="catalog">
