--- a/Profesores/IndexProfesor.html
+++ b/Profesores/IndexProfesor.html
@@ -55,12 +55,12 @@
 
 
 
-		<center><h2>Perfil.</h2></center>
+
 			<form class="contact_form" action="#" id="contact_form" runat="server">
 		<div>
 
 			<ul>
-				<br>
+				<li><span><center><h2>Perfil.</h2></center></span></li>
 				<li>
 				<label for="name">Nombre:</label>
 				<input type="text" placeholder="Carlos Augusto" required />
