--- a/Profesores/SolicitarAsignaturas.html
+++ b/Profesores/SolicitarAsignaturas.html
@@ -56,7 +56,7 @@
 			<div>
 			  <ul>
 				<li>
-				<span><h2> Solicitar Asignaturas </h2></span>
+				<span><center><h2> Solicitar Asignaturas </h2></center></span>
 				<span class="required_notification">* Datos requeridos</span>
 				</li>
 
