--- a/Profesores/ListaAsignaturasProfesor.html
+++ b/Profesores/ListaAsignaturasProfesor.html
@@ -53,7 +53,7 @@
 
 		<div id="areaDeTrabajo">
 
-				<h2> Lista de Asignaturas</h2>
+				<center><h2> Lista de Asignaturas</h2></center>
 
 			<table class="catalog">
 				<tr>
