--- a/JefesCarrera/EditarAsignaturas.html
+++ b/JefesCarrera/EditarAsignaturas.html
@@ -58,14 +58,14 @@
 					<ul>
 						<li><a href="ConsultarSalones.html">Consultar</a></li>
 						<li><a href="AgregarSalones.html">Agregar</a></li>
-						<li><a href="EditarSalones.html">Editar</a></li>
+						<li><a href="EditarSalones.html">Editar/Eliminar</a></li>
 					</ul>
 				</li>
   				<li class="nivel1"><a>Asignaturas</a>
 					<ul>
 						<li><a href="ConsultarAsignaturas.html">Consultar</a></li>
 						<li><a href="AgregarAsignaturas.html">Agregar</a></li>
-						<li><a href="EditarAsignaturas.html">Editar</a></li>
+						<li><a href="EditarAsignaturas.html">Editar/Eliminar</a></li>
 
 					</ul>
 				</li>
@@ -92,10 +92,7 @@
 					<td class="chiquito">Horas al semestre</td>
 					<td class="chiquito">Horas a la semana</td>
 					<td class="chiquito">Horas teóricas</td>
-					<td class="chiquito">Horas prácticas</td>
-					<td class="chiquito">Horas de laboratorio</td>
 					<td class="chiquito">Créditos</td>
-					<td class="chiquito">Seriación</td>
 					<td>Seriación subsecuente</td>
 					<td>Seriación antecedente</td>
 					<td class="mediano">Editar</td>
@@ -110,9 +107,6 @@
 					<td class="chiquito">5</td>
 					<td class="chiquito">70</td>
 					<td class="chiquito">10</td>
-					<td class="chiquito">00</td>
-					<td class="chiquito">10</td>
-					<td class="chiquito">si</td>
 					<td>ICC2</td>
 					<td>Matemáticas Discretas</td>
 					<td class="mediano"><a href = "FormularioAsignaturas.html"><img class="button" src="../img/edit-icon.png"></a></td>
@@ -126,10 +120,7 @@
 					<td class="chiquito">80</td>
 					<td class="chiquito">5</td>
 					<td class="chiquito">80</td>
-					<td class="chiquito">00</td>
-					<td class="chiquito">00</td>
 					<td class="chiquito">10</td>
-					<td class="chiquito">si</td>
 					<td>--</td>
 					<td>ICC1</td>
 					<td class="mediano"><a href="FormularioAsignaturas.html"><img class="button" src="../img/edit-icon.png"></a></td>
@@ -143,10 +134,7 @@
 					<td class="chiquito">80</td>
 					<td class="chiquito">5</td>
 					<td class="chiquito">80</td>
-					<td class="chiquito">00</td>
-					<td class="chiquito">00</td>
 					<td class="chiquito">10</td>
-					<td class="chiquito">si</td>
 					<td>--</td>
 					<td>--</td>
 					<td class="mediano"><a href="FormularioAsignaturas.html"><img class="button" src="../img/edit-icon.png"></a></td>
