--- a/JefesCarrera/EditarSalones.html
+++ b/JefesCarrera/EditarSalones.html
@@ -56,14 +56,14 @@
 					<ul>
 						<li><a href="ConsultarSalones.html">Consultar</a></li>
 						<li><a href="AgregarSalones.html">Agregar</a></li>
-						<li><a href="EditarSalones.html">Editar</a></li>
+						<li><a href="EditarSalones.html">Editar/Eliminar</a></li>
 					</ul>
 				</li>
   				<li class="nivel1"><a>Asignaturas</a>
 					<ul>
 						<li><a href="ConsultarAsignaturas.html">Consultar</a></li>
 						<li><a href="AgregarAsignaturas.html">Agregar</a></li>
-						<li><a href="EditarAsignaturas.html">Editar</a></li>
+						<li><a href="EditarAsignaturas.html">EditarEliminar</a></li>
 					</ul>
 				</li>
   				<li class="nivel1"><a href="SolicitudAsignaturas.html">Solicitudes de asignaturas</a>
@@ -85,6 +85,7 @@
 						<td>División</td>
 						<td class="chiquito">Cupo</td>
 						<td class="mediano">Editar</td>
+						<td class="mediano">Eliminar</td>
 					</tr>
 					<tr>
 						<td class="mediano">A-103</td>
@@ -92,6 +93,7 @@
 					<td>Departamento de Ciencias</td>
 					<td class="chiquito">40</td>
 						<td class="mediano"><a href="FormularioSalones.html"><img class="button" src="../img/edit-icon.png"></a></td>
+					<td class="mediano"><img class="button" src="../img/editing-delete-icon.png" onclick="deleteItem('Administración de proyectos')"></td>
 					</tr>
 					<tr>
 						<td class="mediano">O-103</td>
@@ -99,6 +101,7 @@
 					    <td>Departamento de Ciencias</td>
 					    <td class="chiquito">25</td>
 						<td class="mediano"><a href="FormularioSalones.html"><img class="button" src="../img/edit-icon.png"></td>
+						<td class="mediano"><img class="button" src="../img/editing-delete-icon.png" onclick="deleteItem('Administración de proyectos')"></td>
 					</tr>
 					<tr>
 						<td class="mediano">P-103</td>
@@ -106,6 +109,7 @@
 					<td>Departamento de Ciencias</td>
 					<td class="chiquito">25</td>
 						<td class="mediano"><a href="FormularioSalones.html"><img class="button" src="../img/edit-icon.png"></td>
+					<td class="mediano"><img class="button" src="../img/editing-delete-icon.png" onclick="deleteItem('Administración de proyectos')"></td>
 					</tr>
 				</table>
 		</div>
