--- a/Profesores/EditarPerfil.html
+++ b/Profesores/EditarPerfil.html
@@ -130,7 +130,7 @@
 		*/
 
 		if(formValidation){
-			addItemConfirmation("Actualizaste tu perfil","IndexJefeCarrera.html");
+			addItemConfirmation("Actualizaste tu perfil","IndexProfesor.html");
 		}
 	}
 
