--- a/Profesores/FormularioNuevaMateria.html
+++ b/Profesores/FormularioNuevaMateria.html
@@ -167,7 +167,7 @@
 		*/
 
 		if(formValidation){
-			addItemConfirmation("El elemento se agrego","IndexJefeCarrera.html");
+			addItemConfirmation("El elemento se agrego","IndexProfesor.html.html");
 		}
 	}
 
