--- a/Profesores/SolicitarAsignaturas.html
+++ b/Profesores/SolicitarAsignaturas.html
@@ -112,7 +112,7 @@
 		*/
 
 		if(formValidation){
-			addItemConfirmation("Solicitud enviada","IndexJefeCarrera.html");
+			addItemConfirmation("Solicitud enviada","IndexProfesor.html");
 		}
 	}
 
