--- a/Profesores/ListaAsignaturasProfesor.html
+++ b/Profesores/ListaAsignaturasProfesor.html
@@ -122,7 +122,7 @@
 		*/
 
 		if(formValidation){
-			addItemConfirmation("Imprimiendo","IndexJefeCarrera.html");
+			addItemConfirmation("Imprimiendo","IndexProfesor.html");
 		}
 	}
 
