--- a/Profesores/SolicitarAsignaturas.html
+++ b/Profesores/SolicitarAsignaturas.html
@@ -91,7 +91,7 @@
 				</div>
 
 
-					<h2> Agregar Materia </h2>
+					<center><h2> Agregar Materia </h2></center>
 					<br>
 					<a href="FormularioNuevaMateria.html" >Agregar Nueva Materia</a>
 
