--- a/Profesores/EstadoSolicitud.html
+++ b/Profesores/EstadoSolicitud.html
@@ -25,7 +25,7 @@
 	<a id= "inicio" href="IndexProfesor.html">Inicio</a>
 	<img  height="16" width="16" src="../img/house.png">
 	<span id ="saludo">
-	Conectado como Jefe de carrera
+	Conectado como Profesor
 	</span>
 	<a id = "salir" href="../Index.html"> Salir </a>
 	<img height="16" width="16" src="../img/salir.png" style="margin-right: -47px;float: right;">
