--- a/JefesCarrera/AgregarAsignaturas.html
+++ b/JefesCarrera/AgregarAsignaturas.html
@@ -148,8 +148,8 @@
 
 				<label for="name" >Seriación subsecuente:</label>
 				<select name="select">
-					<option value="value1" selected>Si</option>
-					<option value="value2">No </option>
+					<option value="value1" selected>Materia 1</option>
+					<option value="value2">Materia 2</option>
 
 
 					</select>
@@ -157,8 +157,8 @@
 				<li>
 				<label for="name" >Seriación antecedente:</label>
 				<select name="select">
-					<option value="value1" selected>Si</option>
-					<option value="value2">No </option>
+					<option value="value1" selected>Materia 3</option>
+					<option value="value2">Materia 4</option>
 
 
 					</select>
@@ -189,7 +189,7 @@
 		validateRequired("creditos", "El campo creditos es requerido");
 		**/
 		if(formValidation){
-			addItemConfirmation("Elemento agregado con exito","IndexJefeCarrera.html");
+			addItemConfirmation("Elemento agregado con éxito","IndexJefeCarrera.html");
 		}
 	}
 
