--- a/JefesCarrera/AgregarJefesCarrera.html
+++ b/JefesCarrera/AgregarJefesCarrera.html
@@ -141,7 +141,7 @@
 		validateRequired("pass", "El campo contraseña es requerido");
 		*/
 		if(formValidation){
-			addItemConfirmation("Elemento agregado con exito","IndexJefeCarrera.html");
+			addItemConfirmation("Elemento agregado con éxito","IndexJefeCarrera.html");
 		}
 	}
 
