--- a/JefesCarrera/SolicitudAsignaturasNuevas.html
+++ b/JefesCarrera/SolicitudAsignaturasNuevas.html
@@ -72,7 +72,7 @@
 
 		<div id="areaDeTrabajo">
 			<center>
-				<h2>Solicitud de aignaturas nuevas. </h2>
+				<h2>Solicitud de asignaturas nuevas. </h2>
 			</center>
 
 
