--- a/Profesores/EditarPerfil.html
+++ b/Profesores/EditarPerfil.html
@@ -82,7 +82,7 @@
 				<input type="text" placeholder="Licenciado" required />
 
 				<label for="name" class="dos">Estudio:</label>
-				<input type="text" placeholder="UNAM" required />
+				<input type="text" placeholder="matemáticas" required />
 				</li>
 
 				<li>
