--- a/JefesCarrera/AgregarSalones.html
+++ b/JefesCarrera/AgregarSalones.html
@@ -87,7 +87,7 @@
 				<span class="required_notification">* Datos requeridos</span>
 				</li>
 				<li>
-				<label for="name">Salon:</label>
+				<label for="name">Salón:</label>
 				<input type="text"  required />
 
 				<label for="name">Edificio:</label>
