--- a/JefesCarrera/ListaAsignaturasProfesor.html
+++ b/JefesCarrera/ListaAsignaturasProfesor.html
@@ -123,7 +123,7 @@
 
 			<ul>
 
-			<li> <button class="submit" type="submit" onclick="doSubmit()">Aceptar</button> </li>
+			<li> <button class="submit" type="submit" onclick="doSubmit()">Imprimir</button> </li>
 			</ul>
 
 		</div>
