--- a/Profesores/ListaAsignaturasProfesor.html
+++ b/Profesores/ListaAsignaturasProfesor.html
@@ -99,7 +99,7 @@
 
 			<ul>
 
-			<li> <button class="submit" type="submit" onclick="doSubmit()">Aceptar</button> </li>
+			<li> <button class="submit" type="submit" onclick="doSubmit()">Imprimir</button> </li>
 			</ul>
 
 		</div>
