--- a/Profesores/EditarPerfil.html
+++ b/Profesores/EditarPerfil.html
@@ -103,7 +103,7 @@
 					<option value="value1" selected>Activo</option>
 					<option value="value2">Inactivo</option>
 				</select>
-
+				 <button  type="submit"   onclick="doSubmit()">Subir curriculum</button>
 				</li>
 
 
